--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
         
         <div class="hero-content">
-            <h1>Hi, I'm Joe Borri</h1>
-            <p style="margin-top: 400px;">Data Analyst</p>
-            <!-- <div class="hero-buttons">
+            <h1 style="margin-top: 60px;">Hi, I'm Joe Borri</h1>
+            <p style="margin-top: 420px;margin-bottom: 20px;">Data Analyst</p>
+            <div class="hero-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
-                <a href="#contact" class="btn btn-secondary">Get In Touch</a>
-            </div> -->
+                <!-- <a href="#contact" class="btn btn-secondary">Get In Touch</a> -->
+            </div>
         </div>
         
     </section>
