--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitreous Portfolio</title>
+    <title>Joe Borri</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <style>
         * {
@@ -234,7 +234,7 @@
                 <div class="nav-content">
                     <p>Designer / developer based in [Brooklyn].</p>
                     <br>
-                    <p>Brief description in your own words about your work and interests.</p>
+                    <!-- <p>Brief description in your own words about your work and interests.</p> -->
                 </div>
             </div>
             
@@ -404,7 +404,7 @@
                 if (caustic.y > height) caustic.y = height;
             }
         }
-        
+
     </script>
     <script src="js/index.js"></script>
 </body>
