--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="nav-section">
                 <div class="nav-title">LINKS</div>
                 <div class="nav-content">
-                    <a href="#">Resume</a><br>
+                    <a href="#" id="resume">Resume</a><br>
                     <a href="#">Github<sup>&#8663;</sup></a><br>
                     <a href="#">LinkedIn<sup>&#8663;</sup></a><br>
                 </div>
@@ -93,6 +93,9 @@
                 <p>Additional context or details in another language if needed.</p>
             </div>
         </div>
+        <div class="hidden" id="resume-modal"><embed src="images/resume.pdf" type="application/pdf" width="100%" height="500px" /></div>
+        
+
     </main>
 
     <script>
